# agate

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: python-tests.yml
datasets/pokemon/: README.md
interview/: __init__.py  data.py  models.py  utils.py  visualization.py
notebooks/: pokemon_assessment.ipynb
scripts/: setup_env.py
tests/: __init__.py  test_data.py  test_models.py  test_utils.py  test_visualization.py
