[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview"
version = "0.1.0"
description = "AI/ML Coding Interview Assessment Platform"
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = {text = "MIT"}
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "tensorflow",
    "torch",
    "matplotlib",
    "seaborn",
    "jupyter",
    "ipykernel",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
packages = ["interview"]